src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CityManager</label>
        <referenceTo>CityManager__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>